--- a/src/css/team.css
+++ b/src/css/team.css
@@ -26,7 +26,7 @@
   padding: 25px;
 }
 .headingteam:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   cursor: pointer;
   text-underline-offset: 14px;
 }
@@ -40,13 +40,17 @@
   justify-content: center;
   align-items: center;
   border-radius: 20px;
-  background-image: url("https://t4.ftcdn.net/jpg/02/24/86/95/360_F_224869519_aRaeLneqALfPNBzg0xxMZXghtvBXkfIA.jpg");
+  /* background-image: url("https://t4.ftcdn.net/jpg/02/24/86/95/360_F_224869519_aRaeLneqALfPNBzg0xxMZXghtvBXkfIA.jpg"); */
   background-position: center;
   background-size: cover;
-  background-blend-mode: lighten;
+  /* background-blend-mode: lighten; */
   /* box-shadow: -10px -15px 10px 2px rgb(0, 0, 0); */
   /* box-shadow: 10px 10px 10px 2px rgb(0, 0, 0); */
   /* animation: glow 1.5s infinite alternate; */
+  border: 2px solid rgb(255, 255, 255);
+  box-shadow: 
+      0 5px 5px rgba(255, 255, 255, 0.7),  /* Main shadow */
+      0 4px 5px rgba(255, 255, 255, 0.7);  /* Larger, softer shadow for lift */ 
 }
 @keyframes glow {
   0% {
@@ -70,6 +74,10 @@
   /* background: linear-gradient(205deg,#D94625,#A63D33,#0D0D0D,#733D3D,#F28627); */
   z-index: -10;
   /* filter: blur(5px); */
+  border: 2px solid rgb(255, 255, 255);
+  box-shadow: 
+      0 5px 5px rgba(255, 255, 255, 0.7),  /* Main shadow */
+      0 4px 5px rgba(255, 255, 255, 0.7);  /* Larger, softer shadow for lift */ 
 
   border-radius: 20px;
   /* animation: name duration timing-function delay iteration-count direction fill-mode; */
@@ -94,7 +102,10 @@
   /* background: linear-gradient(360deg,#03a9f4,#ff0058); */
   /* filter: blur(30px); */
   /* z-index: -20; */
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
+  box-shadow: 
+      0 5px 5px rgba(255, 255, 255, 0.7),  /* Main shadow */
+      0 4px 5px rgba(255, 255, 255, 0.7);  /* Larger, softer shadow for lift */ 
   border-radius: 20px;
   z-index: -10;
 }
