--- a/src/css/Sponser.css
+++ b/src/css/Sponser.css
@@ -8,9 +8,9 @@ body {
     background: white;
 }
 
-*, *::before, *::after {
+/* *, *::before, *::after {
     box-sizing: inherit;
-}
+} */
 
 .sponser-bg {
     display: flex;
