--- a/src/css/Sponser.css
+++ b/src/css/Sponser.css
@@ -223,16 +223,15 @@ a {
         justify-content: center;
         overflow: hidden; 
     }
-    .sponsor-box {
+    /* .sponsor-box {
         width: 70%;
         height: auto;
         margin-left: 15%;
-    }
+    }  */
 
     .sponsor-logo {
         margin-left: 5%;
-        width: 90%; 
-        height: auto; 
+        width: 90%;
     }
     
 }
@@ -247,3 +246,5 @@ a {
         margin: 0 3.5rem;
     }
 }
+
+
