--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -2,7 +2,8 @@
     display: flex; /* Enables flexbox */
     justify-content: center; /* Centers items horizontally */
     align-items: center; /* Centers items vertically */
-    background-color: rgba(255, 255, 255, 0); /* Transparent background */
+    background-color: rgba(255, 255, 255, 0); 
+    /* background-color: none; */
     padding: 25px;
     width: 100%; /* Full width of the navbar */
     z-index: 1; /* Ensure it's on top of the image */
@@ -43,7 +44,8 @@
 }
 
 .bg-navbar {
-  background-color: #172D21;
+  background-color: #010300;
+  
 }
 
 .nav-bar {
@@ -53,11 +55,12 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
+  
 }
 
 .element {
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 0.5rem 1rem;
   border-bottom: 2px solid transparent;
   font-size: 1.125rem;
