--- a/src/css/Sponser.css
+++ b/src/css/Sponser.css
@@ -18,7 +18,7 @@ body {
     position: relative;
     width: 100%; 
     height: 500px;
-    background: url('http://mun.iiti.ac.in/assets/img/bg/un-hall.jpg') no-repeat;
+    background: url('https://cdn-images-1.medium.com/max/2000/1*MiDSoYCOHHTxof-fAp7PLQ.jpeg') no-repeat;
     background-size: 100% 100%;
     align-items: center;
     justify-content: center;
